--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.css
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.css
@@ -1,43 +1,79 @@
-.welcome-admin{
-    position: absolute;
-    right: 10px;
-    bottom: -44px;
+.welcome-admin {
+  position: absolute;
+  right: 10px;
+  bottom: -44px;
 }
 
 .user-profile {
-    width: 40px;
-    height: 40px;
-    border: 1px solid white;
-    background: antiquewhite;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
+  width: 50px;
+  height: 50px;
+  border: 2px solid white;
+  background: antiquewhite;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
 }
 
-.badge{
-    border-radius: 5px;  
-    padding: 10px 12px;
+.badge {
+  border-radius: 5px;
+  padding: 10px 12px;
 }
 
-.grid-pie ngx-charts-pie-grid{
-    text-align: -webkit-right;
+.grid-pie ngx-charts-pie-grid {
+  text-align: -webkit-right;
 }
-.pie-chart ngx-charts-pie-chart{
-    text-align: -webkit-center;
+.pie-chart ngx-charts-pie-chart {
+  text-align: -webkit-center;
 }
 
 /* scroller */
 .viewport {
-    height: 135vh;  /* Adjust as needed */
-    width: 100%;
-    overflow: auto;
-  }
+  height: 135vh; /* Adjust as needed */
+  width: 100%;
+  overflow: auto;
+}
 
+.employees {
+  font-size: 50px;
+}
 
-  .employees{
-    font-size: 50px;
-  }
+.products {
+  font-size: 50px;
+}
 
-  .products{
-    font-size: 50px;
-  }
+.card-product-percentage.mat-mdc-card-content {
+  padding: 0 !important;
+}
+
+.product-card {
+  border-radius: 12px;
+  border: 1px solid rgb(207, 203, 203);
+  background: linear-gradient(to right, #ffffff, #f8f9fa);
+  transition: 0.2s ease-in-out;
+}
+
+.product-card:hover {
+  transform: scale(1.01);
+  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-code {
+  font-size: 12px;
+  color: #777;
+}
+
+.progress-circle {
+  min-width: 40px;
+  min-height: 40px;
+  border-radius: 50%;
+  background: #ffefd5;
+  color: #d18300;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  padding: 5px;
+  text-align: center;
+  white-space: nowrap; /* Prevent text from wrapping */
+  box-shadow: inset 0px 2px 6px rgba(0, 0, 0, 0.1);
+}
