--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -161,7 +161,7 @@
                 class="col-12 p-1"
               >
                 <mat-card
-                  class="product-card bg-white shadow-sm product-reward-card p-3 my-2"
+                  class="product-card bg-white shadow-sm product-reward-card p-2 my-1"
                   appearance="outlined"
                 >
                   <mat-card-content
@@ -175,8 +175,8 @@
                           alt=""
                         />
                       </div>
-                      <div class="ps-2">
-                        <div class="fw-bold">{{ product.productTitle }}</div>
+                      <div >
+                        <div class="fw-bold product-title">{{ product.productTitle }}</div>
                         <div class="product-code">
                           {{ product.couponCode }}
                         </div>
