--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.css
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.css
@@ -52,20 +52,19 @@
   transition: 0.2s ease-in-out;
 }
 
-.product-card:hover {
-  transform: scale(1.01);
-  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.1);
-}
-
 .product-code {
   font-size: 12px;
   color: #777;
+  margin-top: -7px;
+}
+.product-title {
+  margin-top: 7px;
 }
 
 .progress-circle {
   min-width: 40px;
   min-height: 40px;
-  border-radius: 50%;
+  border-radius: 12px;
   background: #ffefd5;
   color: #d18300;
   display: flex;
