--- a/client/webUI/src/app/pages/admin/feedback/feedback.component.html
+++ b/client/webUI/src/app/pages/admin/feedback/feedback.component.html
@@ -12,7 +12,7 @@
           <!-- User Image and Name -->
           <div>
             <div class="user-info">
-              <div class="user-initials shadow-sm d-flex align-item-center me-3">
+              <div class="user-initials shadow-sm d-flex align-item-center">
                 {{ getInitials(card.name) }}
               </div>
               <div>
