--- a/client/webUI/src/app/pages/admin/feedback/feedback.component.css
+++ b/client/webUI/src/app/pages/admin/feedback/feedback.component.css
@@ -14,6 +14,7 @@
     object-fit: cover;
     margin-right: 10px; */
   min-width: 50px;
+  margin-right: 10px;
   min-height: 50px;
   border: 1px solid white;
   background: antiquewhite;
