--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
@@ -28,10 +28,14 @@
     border-radius: 5px;
   }
 
+  /* toggle button */
   .rounded-toggle mat-button-toggle {
-    border-radius: 50px !important; /* Ensures individual buttons are rounded */
-    padding: 8px 10px; /* Adjust padding */ 
-    
+    border-radius: 50px !important; /*Ensures individual buttons are rounded
+    /* padding: 8px 10px; Adjust padding      */
+  }
+
+  :host ::ng-deep  .mat-button-toggle-label-content{
+    padding: 10px 20px !important;
   }
 
   .mat-button-toggle-group {
@@ -57,6 +61,19 @@
   align-items: center; /* Keeps text vertically centered */
   justify-content: center;
 }
+
+.mat-button-toggle-standalone:not([class*=mat-elevation-z]), .mat-button-toggle-group:not([class*=mat-elevation-z]) {
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+}
+
+/* lock icon */
+.lock.material-icons{
+  font-size: 20px !important;
+}
+
+
+
+
 
 
   
