--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -120,13 +120,14 @@
           </td>
         </ng-container>
         <!-- /joining date -->
+         <!-- action -->
         <ng-container matColumnDef="Action">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
             Action
           </th>
           <td mat-cell *matCellDef="let element">
             <div class="d-flex">
-              <span
+              <span *ngIf="!element.isPrimaryAdmin"
                 (click)="openDialog(element)"
                 [ngClass]="{
                   disabled: element.isPrimaryAdmin === true,
@@ -147,12 +148,11 @@
                   />
                 </svg>
               </span>
-              <div
-                *ngIf="element.isPrimaryAdmin"
-                class="ms-3 bg-primary p-2 text-white primary-admin"
-              >
-                Primary Admin
-              </div>
+              <span *ngIf="element.isPrimaryAdmin" matTooltip="primary admin can't be deleted" class="border border-light p-2 shadow-sm table-action-buttons ms-2">
+                <mat-icon class="lock text-success">
+                  lock
+                </mat-icon>
+              </span>              
             </div>
           </td>
         </ng-container>
