--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -1,7 +1,15 @@
 <section>
-  <div>
-    <h5 class="fw-bold mb-4">Profile Settings</h5>
-  </div>
+  <div  class=mb-3>
+    <div>
+      <h5 class="fw-bold mb-4">Profile Settings</h5>
+    </div>
+    <!-- note -->
+    <div class=" w-50 p-4 d-flex align-items-center info shadow-sm fw-bold">
+      <mat-icon class="me-2">info</mat-icon>Admin key comprises of first 3 letters of admin name and dob
+        respectively.
+    </div>
+    <!-- /note -->
+  </div>  
   <!-- admin -->
   <mat-card
     class="bg-white border-light product-reward-card p-3"
@@ -26,10 +34,10 @@
       </form>
       <!-- /searchbar -->
       <!-- note -->
-      <div class="ms-5">
+      <!-- <div class="ms-5">
         Note : Admin key comprises of first 3 letters of admin name and dob
         respectively.
-      </div>
+      </div> -->
       <!-- /note -->
     </div>
     <!-- table reference with search and pagination -->
