--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -104,13 +104,13 @@
           <td mat-cell *matCellDef="let element">
             <span
               *ngIf="element.isPicked === 'completed'"
-              class="badge bg-success text-white p-2"
+              class="completed text-success"
             >
               Completed
             </span>
             <span
               *ngIf="element.isPicked === 'pending'"
-              class="badge bg-warning text-white p-2"
+              class="pending text-warning "
             >
               Pending
             </span>
