update in interceptor

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -34,7 +34,7 @@
           class="bg-white shadow-sm product-reward-card p-3"
           appearance="outlined"
         >
-          <mat-card-content class="d-block">
+          <mat-card-content >
             <!-- form -->
             <form [formGroup]="addEmployeeCodeForm">
               <h4 class="fw-bold mb-1">Employee Name</h4>
