--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -18,9 +18,9 @@
                 <div class="row">
                   <div class="col-7">
                     <div>
-                      <h4 class="fw-bold text-primary">
+                      <h5 class="fw-bold text-primary">
                         Welcome {{ loggedUser.name }}!
-                      </h4>
+                      </h5>
                     </div>
                     <div>
                       Manage employee gift selections with ease! Here, you can
@@ -29,7 +29,7 @@
                     </div>
                   </div>
                   <div class="col-5">
-                    <img src="assets/images/welcome-admin.png" width="300" height="300" alt="" class="welcome-admin" />
+                    <img src="assets/images/welcome-admin.png" width="300" height="300" alt="" class="welcome-admin position-absolute" />
                   </div>
                 </div>
               </mat-card-content>
@@ -38,7 +38,7 @@
         </div>
         <!-- /welcome admin -->
         <!-- employees products employees -->
-        <div class="row mb-4">
+        <div class="row mb-4">          
           <div class="col-6">
             <mat-card class="bg-white shadow-sm product-reward-card p-3 text-center" appearance="outlined">
               <mat-card-content>
@@ -65,11 +65,11 @@
               <mat-card-content>                
                 <div class="row">
                   <div class="col-5">
-                    <img src="" width="300" height="300" alt=""  />
+                    <img src="assets/images/products/create-magic.png" width="270" height="270" class="position-absolute gift-selection-overview" alt=""  />
                   </div>             
                   <div class="col-7">
                     <div>
-                      <h4 class="fw-bold">Gift Selection Overview</h4>
+                      <h5 class="fw-bold">Gift Selection Overview</h5>
                     </div>
                     Get a quick snapshot of employee gift selections and product popularity. Track total employees,
                     available products, and selection trends in real-time. Analyze the pick percentage to understand
@@ -85,7 +85,7 @@
             <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
               <mat-card-content>
                 <div>
-                  <h4 class="fw-bold">Employee Picks</h4>
+                  <h5 class="fw-bold">Employee Picks</h5>
                 </div>
                 <!-- pie chart -->
                 <div class="pie-chart">
@@ -114,7 +114,7 @@
         <mat-card class="bg-white shadow-sm product-reward-card p-3 h-100" appearance="outlined">
           <mat-card-content>
             <div>
-              <h4 class="fw-bold">Transactions</h4>
+              <h5 class="fw-bold">Transactions</h5>
             </div>
             <!-- virtual scroll -->
             <cdk-virtual-scroll-viewport itemSize="80" class="viewport" (scrolledIndexChange)="onScrollProducts()">
