updated suggestion count in dashboard

--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -39,7 +39,7 @@
         <!-- /welcome admin -->
         <!-- employees products employees -->
         <div class="row mb-4">          
-          <div class="col-6">
+          <div class="col-4">
             <mat-card class="bg-white shadow-sm product-reward-card p-3 text-center" appearance="outlined">
               <mat-card-content>
                 <div class="employees fw-bold">{{ totalEmployees }}</div>
@@ -47,11 +47,19 @@
               </mat-card-content>
             </mat-card>
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <mat-card class="bg-white shadow-sm text-center product-reward-card p-3" appearance="outlined">
               <mat-card-content>
                 <div class="products fw-bold">{{ totalProducts }}</div>
                 <div class="fs-14 mt-4">Total Products</div>
+              </mat-card-content>
+            </mat-card>
+          </div>
+          <div class="col-4">
+            <mat-card class="bg-white shadow-sm text-center product-reward-card p-3" appearance="outlined">
+              <mat-card-content>
+                <div class="products fw-bold">{{ totalSuggestions }}</div>
+                <div class="fs-14 mt-4">Total Suggestions</div>
               </mat-card-content>
             </mat-card>
           </div>
